@@ -76,8 +76,8 @@ instead (see below for details).
 <tr><td class="download">
 <a href="ftp://ftp.octave.org/pub/octave/bleeding-edge">Testing</a></td>
 <td class="download">3.3.53
-    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-3.3.53.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-3.3.53.tar.bz2">.tar.bz2</a>)
+    (<a href="ftp://alpha.gnu.org/gnu/octave/octave-3.3.53.tar.gz">.tar.gz</a>)
+    (<a href="ftp://alpha.gnu.org/gnu/octave/octave-3.3.53.tar.bz2">.tar.bz2</a>)
 </td>
 <td class="download">19 Oct 2010</td></tr>
 </table>
